# ytmusic-like-to-playlist

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  README.md  auth.json.example  config.json.example
src/: lastfm_helper.rs  main.rs  spotify_helper.rs
