[package]
name = "ytmusic-like-to-playlist"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ytmusicapi = { path = "../ytmusicapi-rs" }
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
