[package]
name = "ytmusic-like-to-playlist"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ytmusicapi = "0.4.2"
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2.2"
