[package]
name = "ytmusic-like-to-playlist"
version = "0.1.0"
edition = "2024"
description = "Sync YouTube Music liked songs into genre-based playlists using Last.fm for genre detection"
license = "MIT"
categories = ["command-line-utilities", "api-bindings", "multimedia::audio"]
keywords = ["youtube-music", "lastfm", "playlist", "music", "cli"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
ytmusicapi = "0.4.2"
serde_json = "1.0"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
clap = { version = "4.5", features = ["derive"] }
unicode-width = "0.2.2"
